k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mea
  labels:
    app: mea-root-kernel
