k8s/control-plane-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: control-plane
  namespace: mea
  labels:
    app: control-plane
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: control-plane
